--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,33 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.12.1 <3.0.0"
+  sdk: ">=3.1.5 <4.0.0"
+  flutter: ">=3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons:
-  flutter_screenutil: 5.7.0
+  flutter_screenutil: 5.9.0
+  package_info_plus: 
+  permission_handler: 10.3.0
+  ffi:
   melos:
+
+  package_management:
+    git:
+      url: https://bitbucket.org/concung/cci.mobile.flutter.packagemanagement.git
+      ref: main
 
   flutter_module:
     path: ../flutter_module
+  flutter_lints: ^3.0.1
 
 dependency_overrides:
-
+  provider: 5.0.0
+  ffi: 1.1.2
+  uuid: 3.0.7
+  socket_io_client: 2.0.1
   omicall_flutter_plugin:
     git:
       url: https://github.com/VIHATTeam/OMICALL-Flutter-SDK.git
@@ -26,16 +40,6 @@ dependency_overrides:
     git:
       url: https://github.com/VIHATTeam/OMICALL_CHAT_SDK.git
       ref: v0.0.9
-
-  package_management:
-    git:
-      url: https://Thanh54833@bitbucket.org/concung/cci.mobile.flutter.packagemanagement.git
-      ref: 0.0.2
-
-  package_info_plus: ^4.0.2
-  permission_handler: 10.0.2
-  ffi: ^1.1.2
-  win32: ^3.0.0
 
 dev_dependencies:
   flutter_test:
