--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,24 +11,28 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons:
-  flutter_screenutil: 5.9.0
+  flutter_screenutil: 5.9.3
   package_info_plus: 
   permission_handler: 10.3.0
-  ffi:
+  workmanager: ^0.5.2
   melos:
 
   package_management:
     git:
       url: https://bitbucket.org/concung/cci.mobile.flutter.packagemanagement.git
-      ref: main
+      ref: 1.0.8
 
   flutter_module:
     path: ../flutter_module
   flutter_lints: ^3.0.1
 
 dependency_overrides:
+  package_management:
+    git:
+      url: https://bitbucket.org/concung/cci.mobile.flutter.packagemanagement.git
+      ref: 1.0.8
   provider: 5.0.0
-  ffi: 1.1.2
+  ffi: 2.1.3
   uuid: 3.0.7
   socket_io_client: 2.0.1
   omicall_flutter_plugin:
