--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_lints: ^3.0.1
 
 dependency_overrides:
+  geolocator_android: 4.6.0
   package_management:
     git:
       url: https://bitbucket.org/concung/cci.mobile.flutter.packagemanagement.git
@@ -38,12 +39,16 @@ dependency_overrides:
   omicall_flutter_plugin:
     git:
       url: https://github.com/VIHATTeam/OMICALL-Flutter-SDK.git
-      ref: 3.0.13
+      ref: 3.1.40
 
   livetalk_sdk:
     git:
       url: https://github.com/VIHATTeam/OMICALL_CHAT_SDK.git
       ref: v0.0.9
+
+  http: ^0.13.1
+  sqlite3: 1.11.2
+  sqflite_common_ffi: 2.3.0
 
 dev_dependencies:
   flutter_test:
