--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,7 +41,7 @@ scheme_shopee=concungshopeepay
 
 #Omi Call
 omicallUsername = "omicall"
-omicallPassword = "token"
+omicallPassword = "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"
 
 
 
